--- a/LosFitness.Service/LosFitness.Service.csproj
+++ b/LosFitness.Service/LosFitness.Service.csproj
@@ -1,9 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LosFitness.DataAccess\LosFitness.DataAccess.csproj" />
+    <ProjectReference Include="..\LosFitness.Entities\LosFitness.Entities.csproj" />
+  </ItemGroup>
 
 </Project>
