--- a/LosFitness.Service/LosFitness.Service.csproj
+++ b/LosFitness.Service/LosFitness.Service.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LosFitness.DataAccess\LosFitness.DataAccess.csproj" />
+    <ProjectReference Include="..\LosFitness.Entities\LosFitness.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
